# lake

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: bench.rs
examples/: droplet_base.rs  droplet_serialize.rs  fbc_black_magic.rs  lake_alloc_t.rs  lake_creation.rs  lake_marks.rs  lake_process.rs  lake_snapshot.rs  lake_split.rs
src/: lib.rs
src/lake/: mod.rs  utils.rs
src/lake/droplet/: droplet.rs  droplet_dyn.rs  mod.rs
src/lake/lake/: lake.rs  lake_view.rs  mod.rs  sandbox.rs  thread_lake.rs
src/lake/memory/: mod.rs  void.rs  writer.rs
src/small_lake/: mod.rs
tests/: align.rs  droplet.rs  droplet_dyn.rs  fbc.rs  internals.rs  lake.rs  lake_ext.rs  lake_view.rs  sandbox.rs  thread_lake.rs
