[workspace]
members = ["examples/*"]
resolver = "2"

[package]
name = "lake"
version = "0.1.0"
edition = "2024"
authors = ["Vladislav Feuerbach <feuerbachvladislav@gmail.com>"]
description = "Lake is a high-octane memory pool with direct access, checkpoints, rollback, and zero-allocation droplets. No GC. No overhead. Just you and the bytes — total control. Allocate like a cyber-samurai."
license = "MIT OR Apache-2.0"
repository = "https://github.com/TachyonConcepts/lake"
readme = "README.md"
keywords = ["allocator", "memory-pool", "zero-copy", "arena", "performance"]

[lib]
name = "lake"
path = "src/lib.rs"
proc-macro = false

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
typed-arena = "2"
bumpalo = "3"
criterion = { version = "0.7" }
slotmap = "1.0.7"
scoped-arena = "0.4.1"
heapless = "0.8.0"
bump-scope = "0.17.4"
mimalloc = { version = "0.1", default-features = false }